Added Greeting component

--- a/{{cookiecutter.project_slug}}/src/html/index.html
+++ b/{{cookiecutter.project_slug}}/src/html/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Sample Vue.js App</title>
-  <script src="script/main.js" defer></script>
 </head>
 <body>
   <div id="app">
-    <p>Hello, {% raw %}{{ name }}{% endraw %}!</p>
+    <greeting></greeting>
   </div>      
 </body>
 </html>
